--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <style>
         html, body {
             -ms-touch-action: none;
+            touch-action: none;
             background: #000000;
             padding: 0;
             border: 0;
